--- a/card/templates/34.html
+++ b/card/templates/34.html
@@ -2,52 +2,12 @@
 {% load staticfiles %}
 <head>
     <link href='{% static 'styles.css' %}' rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/semantic.min.css" />
     <title> Report Card </title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.rawgit.com/MrRio/jsPDF/master/dist/jspdf.min.js"></script>
-    <script type="text/javascript" src="//cdn.rawgit.com/niklasvh/html2canvas/0.5.0-alpha2/dist/html2canvas.min.js">
-    </script>
-    <script type="text/javascript">
-      (function() {
-      var form = $('#y'),
-      cache_width = form.width(),
-      a4 = [595.28, 841.89]; // for a4 size paper width and height 
-
-      $('.indi').on('click', function() {
-      $('body').scrollTop(0);
-      createPDF();
-      });
- 
-      //create pdf 
-      function createPDF() {
-        getCanvas().then(function(canvas) {
-        var img = canvas.toDataURL("image/png"),
-        doc = new jsPDF({
-        unit: 'px',
-        format: 'a4'
-      });
-   
-      doc.addImage(img, 'JPEG', 20, 20);
-      doc.save('Result.pdf');
-      form.width(cache_width);
-      });
-    }
-
-      // create canvas object 
-    function getCanvas() {
-      form.width((a4[0] * 1.33333) - 80).css('max-width', 'none');
-      return html2canvas(form, {
-      imageTimeout: 2000,
-      removeContainer: true
-    });
-  }
-}());
-</script> 
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js" integrity="sha384-CchuzHs077vGtfhGYl9Qtc7Vx64rXBXdIAZIPbItbNyWIRTdG0oYAqki3Ry13Yzu" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js" integrity="sha384-CchuzHs077vGtfhGYl9Qtc7Vx64rXBXdIAZIPbItbNyWIRTdG0oYAqki3Ry13Yzu" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="crossorigin="anonymous"></script>
 </head>
-<body><button id="cmd">Generate PDF</button>
+<body>
+<button id="cmd">Generate PDF</button>
 {% for i in lst %}
 <div id="y">
 <div id="x{{i.0}}" style="border: 5px solid black;">
@@ -56,7 +16,7 @@
     Vijay Park (Near C-11), Yamuna Vihar, Delhi-110053, Ph. : 22919858, 22919242 <br/>Website:http://lfpsyv.in,  Email : yvlfps@gmail.com</b></p>
 
 <p style="border:2px solid black;border-right:none;border-left:none;"><b>TERM 2 PROGRESS REPORT - SESSION 2017-18</b></p>
-  <table class="table" style="border:3px solid white;text-align:left;font-size:18px;">
+  <table style="border:3px solid white;text-align:left;font-size:18px;">
   <tr>
   <td style="text-align:left;font-size:18px;border-right:2px solid white;width:40%;"><b>Student's Name&emsp;: &emsp;{{i.1.name}}<b></td>
   <td style="text-align:left;font-size:18px;border-right:2px solid white;width:40%;"><b>Adm No. &emsp;&emsp;&emsp;: &emsp;{{i.1.admno}}</b></td>
@@ -73,7 +33,7 @@
   <td style="text-align:left;font-size:18px;"><b>&emsp;Attendence &emsp;&nbsp; : &emsp;{{i.1.attd}}</b></td>
   </tr>
   </table>
-  <table class="table" style="height:auto;width:auto;margin-left:10px;margin-right:10px;">
+  <table style="height:auto;width:auto;margin-left:10px;margin-right:10px;">
     <thead style="background-color:white;border:2px solid black;">
       <tr style="border:2px solid black;">
         <td colspan="6" >Scholastic Areas </td>
@@ -215,7 +175,7 @@
           <td colspan="5"> {{i.2.com.1}} </td>
       </tbody>
   </table>
-  <table class="table" style="height:auto;width:auto;margin-left:10px;margin-right:10px;">
+  <table style="height:auto;width:auto;margin-left:10px;margin-right:10px;">
     <thead style="background-color:white;">
       <tr>
         <td colspan="10">Co-Scholastic Areas: [on a 3-point (A-C) grading scale] </td>
@@ -243,7 +203,7 @@
           <td colspan="5"> {{i.2.hap.1}} </td>
       </tbody>
   </table>
-  <table class="table" style="height:auto;width:auto;margin-left:10px;margin-right:10px;">
+  <table style="height:auto;width:auto;margin-left:10px;margin-right:10px;">
       <thead style="background-color:white;">
       <tr>
         <td colspan="10">Discipline: [on a 3-point (A-C) grading scale]</td>
@@ -267,7 +227,7 @@
   </div>
   <br>
   <div style="float: left;border:2px solid black;width:97%;height:15%;text-align:left;margin-left:20px;margin-bottom:20px;"><b> Result:</b><p>{{i.2.rem}}</p></div>
-  <table class="table" >
+  <table >
       <tr style="border:3px solid white;">
         <td colspan="6" style="text-align:left;border-right:3px solid white;"><b>Date :</b></td>
       </tr>
@@ -282,45 +242,10 @@
 </div>
 {% endfor %}
 
-<script src='{% static 'html2canvas.js' %}'>
-  (function() {
-      var form = $('#y'),
-      cache_width = form.width(),
-      a4 = [595.28, 841.89]; // for a4 size paper width and height 
-
-      $('#cmd').on('click', function() {
-      $('body').scrollTop(0);
-      createPDF();
-      });
- 
-      //create pdf 
-      function createPDF() {
-        getCanvas().then(function(canvas) {
-        var img = canvas.toDataURL("image/png"),
-        doc = new jsPDF({
-        unit: 'px',
-        format: 'a4'
-      });
-   
-      doc.addImage(img, 'JPEG', 20, 20);
-      doc.save('Result.pdf');
-      form.width(cache_width);
-      });
-    }
-
-      // create canvas object 
-    function getCanvas() {
-      form.width((a4[0] * 1.33333) - 80).css('max-width', 'none');
-      return html2canvas(form, {
-      imageTimeout: 2000,
-      removeContainer: true
-    });
-  }
-}());
-</script>
+<script src='{% static 'html2canvas.js' %}'></script>
 {% for i in lst %}
-<!--<script> 
-/*$('#cmd').click(function () {   
+<script> 
+$('#cmd').click(function () {   
 html2canvas(document.querySelector("#x{{i.0}}")).then(canvas => {
     canvas.id="mycanvas";
     var imgData = canvas.toDataURL("image/jpeg", 1.0);
@@ -328,11 +253,10 @@ html2canvas(document.querySelector("#x{{i.0}}")).then(canvas => {
     pdf.addImage(imgData, 'JPEG', 0, 0,210,297);
     pdf.save("Report_{{i.0}}.pdf");
   });
-});*/
-
-</script>-->
+});
+</script>
 {% endfor %}
-<!--<script> 
+<script> 
         $('.indi').click(function () {   
             var thisid=$(this).attr('id');
             
@@ -344,6 +268,7 @@ html2canvas(document.querySelector("#x{{i.0}}")).then(canvas => {
             pdf.save("Report_"+thisid+".pdf");
           });
         });
-</script>-->
+</script>
+        
 </body>
 </html>
